add_subdirectory(avscanner)
add_subdirectory(common)
add_subdirectory(datatypes)
add_subdirectory(filewalker)
add_subdirectory(lockedqueue)
add_subdirectory(manager)
add_subdirectory(pluginimpl)
add_subdirectory(scan_messages)
add_subdirectory(sophos_threat_detector)
add_subdirectory(threat_scanner)
add_subdirectory(unixsocket)
