add_subdirectory(avscanner)
add_subdirectory(common)
add_subdirectory(datatypes)
add_subdirectory(filewalker)
add_subdirectory(manager)
add_subdirectory(mount_monitor)
add_subdirectory(pluginimpl)
add_subdirectory(safestore)
add_subdirectory(scan_messages)
add_subdirectory(sophos_on_access_process)
add_subdirectory(sophos_threat_detector)
add_subdirectory(unixsocket)
