add_subdirectory(distribution)
if (NOT DEFINED ENV{USE_LIBFUZZER})
    add_subdirectory(installer)
    add_subdirectory(filewalker)
    add_subdirectory(plugin)
    add_subdirectory(safestore)
    add_subdirectory(sophos_on_access_process)
    add_subdirectory(sophos_threat_detector)
    add_subdirectory(susi_bootstrapper)
endif (NOT DEFINED ENV{USE_LIBFUZZER})
