add_custom_target(echogTest
        COMMAND echo gtest_SOURCE_DIR=${gtest_SOURCE_DIR}
        COMMAND ls -l ${gtest_SOURCE_DIR}/include/gtest/gtest.h
        )
if (NOT DEFINED ENV{USE_LIBFUZZER})
add_subdirectory(avscanner)
add_subdirectory(capability)
add_subdirectory(commonTest)
add_subdirectory(datatypes)
add_subdirectory(FDTransfer)
add_subdirectory(FileWalkerTest)
add_subdirectory(installer)
add_subdirectory(manager)
add_subdirectory(mount_monitor)
add_subdirectory(penetration)
add_subdirectory(plugin)
add_subdirectory(scan_messages)
add_subdirectory(sophos_on_access_process)
add_subdirectory(sophos_threat_detector)
add_subdirectory(susi_experiment_scanner)
add_subdirectory(threat_scanner)
endif (NOT DEFINED ENV{USE_LIBFUZZER})
add_subdirectory(unixsocket)