add_subdirectory(CentralRegistration)
add_subdirectory(cmcsrouter)
add_subdirectory(Common)
add_subdirectory(Diagnose)
add_subdirectory(Installer)
add_subdirectory(ManagementAgent)
add_subdirectory(mcsrouter)
add_subdirectory(sdu)
add_subdirectory(SulDownloader)
add_subdirectory(Telemetry)
add_subdirectory(TelemetryScheduler)
add_subdirectory(ResponseActions)
add_subdirectory(UpdateSchedulerImpl)
add_subdirectory(watchdog)
add_subdirectory(wdctl)