add_subdirectory(commandline)
add_subdirectory(distribution)
add_subdirectory(Diagnose)
add_subdirectory(installer)
add_subdirectory(ManagementAgent)
add_subdirectory(mcsrouter)
add_subdirectory(SulDownloader)
add_subdirectory(UpdateScheduler)
add_subdirectory(watchdog)
add_subdirectory(wdctl)
add_subdirectory(SystemProductTestOutput)
add_subdirectory(PluginApi)
add_subdirectory(Telemetry)
add_subdirectory(TelemetryScheduler)
